--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "senior-missions-team",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "type": "module",
   "scripts": {
@@ -13,10 +13,10 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.10",
-    "@vitejs/plugin-react": "^4.3.3"
+    "vite": "^5.4.10"
   }
 }
